--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
+    compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
 }
