--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.google.firebase:firebase-auth:11.6.2'
+    implementation 'com.firebaseui:firebase-ui-auth:3.1.2'
+    implementation 'com.facebook.android:facebook-login:4.29.0'
     testImplementation 'junit:junit:4.12'
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
 }
+apply plugin: 'com.google.gms.google-services'
