--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:11.6.2'
     testImplementation 'junit:junit:4.12'
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 apply plugin: 'com.google.gms.google-services'
