Feedback for tasks completed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".FeedbackActivity"></activity>
     </application>
 
 </manifest>
