--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -51,7 +51,8 @@
         <activity android:name=".ProfileActivity" />
         <activity android:name=".FeedbackActivity" />
         <activity android:name=".AboutTEActivity" />
-        <activity android:name=".AboutAppActivity"></activity>
+        <activity android:name=".AboutAppActivity" />
+        <activity android:name=".UploadImageActivity"></activity>
     </application>
 
 </manifest>
