--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,8 @@
         <activity android:name=".FeedbackActivity" />
         <activity android:name=".AboutTEActivity" />
         <activity android:name=".AboutAppActivity" />
-        <activity android:name=".UploadImageActivity"></activity>
+        <activity android:name=".UploadImageActivity" />
+        <activity android:name=".GuidelinesActivity"></activity>
     </application>
 
 </manifest>
